v1.0-networking/subnets.tf
resource "aws_subnet" "public" {
    count=length(var.public_subnet_cidrs)
    vpc_id=aws_vpc.main.id
    cidr_block=var.public_subnet_cidrs[count.index]
    availability_zone = var.availability_zones[count.index]
    map_public_ip_on_launch = true
    tags = {
        Name = "public-subnet-${count.index +1}"
        tier = "public"
    }
  
}
resource "aws_subnet" "private" {
    count=length(var.private_subnet_cidrs)
    vpc_id=aws_vpc.main.id
    cidr_block=var.private_subnet_cidrs[count.index]
    availability_zone=var.availability_zones[count.index]
    map_public_ip_on_launch = false
    tags = {
        Name = "private-subnet-${count.index +1}"
        tier = "private"
    }
}
