v1.0-networking/routes.tf
resource "aws_route_table" "public" {
    vpc_id=aws_vpc.main.id
    route  {
        cidr_block = "0.0.0.0/0"
        gateway_id=aws_internet_gateway.main.id 

    }
    tags = {
          Name = "study-notion-public-rt"
    }
   
  
}

resource "aws_route_table" "private" {

   vpc_id=aws_vpc.main.id
   route{
    cidr_block="0.0.0.0/0"
    gateway_id=aws_nat_gateway.main.id
   }
    tags = {
    Name = "study-notion-private-rt"
  }
}


resource "aws_route_table_association" "public" {
    count=length(aws_subnet.public)
    subnet_id=aws_subnet.public[count.index].id
    route_table_id=aws_route_table.public.id

  
}
resource "aws_route_table_association" "private" {
    count=length(aws_subnet.private)
    subnet_id=aws_subnet.private[count.index].id 
    route_table_id=aws_route_table.private.id
  
}
